bpo-37840: Fix handling of negative indices in bytearray_getitem() (GH-15250)